--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ ul {
 
 hr {
         width: 100%;
-        height: 5px;
+        height: 2px;
         margin-left: auto;
         margin-right: auto;
         background-color: #940a26;
@@ -302,7 +302,7 @@ h2 {
 h3 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
-    color: #222222;
+    color:#222222
     font-size: 18px;
     margin: 0 0 5px 0;
 }
@@ -971,46 +971,61 @@ img {
 /* About Us
 --------------------------- */
  
-.aboutUs-container {
+.AboutMe-container {
 background-repeat: no-repeat;
 background-position: right;
 background-size: auto 100%;
 background-position-y: 70px;
 }
-#about-us, h2, h3, h6, p {
+#AboutMe, h2, h3, h4, p {
 /* color: #0A1525; */
 }
-#about-us .read-more{
+#AboutMe .read-more{
 	border: 1px solid #ED5441;
 	color: #1a1a1a;
 }
 
-#about-us .read-more:hover{
+#AboutMe .read-more:hover{
 	background-color: #e74c3c;
 	border: 1px solid #e74c3c;
 	color: #fff;
 }
-.about-us-post-container{
+.AboutMe-post-container{
 	background-repeat: no-repeat;
 	background-position: right;
 	background-size: auto 100%;
 }
-.about-us{ 
+.AboutMe{ 
 }
-.about-us h3{
-	font-size:28px;
+.AboutMe h3{
+	font-size:30px;
+    margin-left: 30px;
+    color:#940a26;
+
+}
+.AboutMe h4{
+    margin-left: 30px;
+    color:#940a26;
+    margin-right:30px;
+
 }
 .points{ 
 	margin-bottom: 10px;
 	font-size:14px;
 	padding-left:0px;
 }
-.about-us p{
+.AboutMe p{
 	/*font-size: 0.9375em;*/
+    margin-left:30px;
+    margin-right:30px;
+    font-size:18px;
+    margin-top: 50px;
 	line-height: 1.625em;
 	padding: 15px 0;
+    margin-bottom: 10px;
+    color:#636060;
 }
-.about-us .about-us-list{
+.AboutMe .about-us-list{
 	list-style: none;
 	margin-bottom: 20px;
 	padding-left:0px;
@@ -1018,14 +1033,14 @@ background-position-y: 70px;
 	background-color: #EDEDED;
 }
 
-.about-us .points{
+.AboutMe .points{
 	position: relative;
 	list-style-type: none;
 	padding: 5px 0 5px 30px;
 	color: #010100;
 }
 
-.about-us .points:before{
+.AboutMe .points:before{
 	content: "\f058";
 	position: absolute;
 	font-family: FontAwesome;
@@ -1035,13 +1050,65 @@ background-position-y: 70px;
 	top: 3px;
 }
 
-.about-us-link a:first-child{
+.AboutMe-link a:first-child{
 	margin-left: 0;
 }
 
 
-/* Team
+/* Research
 ---------------------------------*/
+
+.Research-container {
+background-repeat: no-repeat;
+background-position: right;
+background-size: auto 100%;
+background-position-y: 70px;
+margin-bottom: 50px;
+margin-top: 50px;
+}
+#Research, h2, h3, h4, p {
+/* color: #0A1525; */
+}
+
+.Research h2{
+    font-size:30px;
+}
+
+.Teaching-container {
+background-repeat: no-repeat;
+background-position: right;
+background-size: auto 100%;
+background-position-y: 70px;
+margin-bottom: 50px;
+margin-top: 50px;
+}
+#Teaching, h2, h3, h4, p {
+/* color: #0A1525; */
+}
+
+.Teaching h2{
+    font-size:30px;
+}
+
+.Awards-container {
+background-repeat: no-repeat;
+background-position: right;
+background-size: auto 100%;
+background-position-y: 70px;
+margin-bottom: 50px;
+margin-top: 50px;
+}
+#Awards, h2, h3, h4, p {
+/* color: #0A1525; */
+}
+
+.Awards h2{
+    font-size:30px;
+}
+
+
+
+
 .team_section {
     max-width: 993px;
     margin: 0 auto;
@@ -1181,7 +1248,7 @@ background-color: #11D25D;
 -moz-transition: all .3s;
 transition: all .3s;
 }
-#aboutUs {
+#AboutMe {
     padding: 60px 0;
     background: #fff;
 }
@@ -1483,8 +1550,10 @@ transition: all .3s;
 	
 /* Portfolio */	
 	
-.container.portfolio_title {
+.container.research_list {
     padding-bottom: 0px;
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 #portfolio {
@@ -2346,7 +2415,7 @@ div.mc-image {
 --------------------------- */
 @media (min-width: 768px) and (max-width: 1200px) {
 
-.aboutUs-container {
+.AboutMe-container {
 background-repeat: no-repeat;
 background-position: right;
 background-size: auto 59%;
@@ -2359,7 +2428,7 @@ float: right;
 width: auto; 
 text-align: center;
 }
-.aboutUs-container{
+.AboutMe-container{
 	background-image:none;
 }
 p{
@@ -2382,12 +2451,12 @@ line-height: 39px;
 margin: 0 0 9px 0;
 }
 .inner_section {
-padding: 20px 0 20px;
+padding: 20px 0px 20px;
 }
-#aboutUs img{
+#AboutMe img{
 margin-bottom:20px;
 }
-#aboutUs h3{
+#AboutMe h3{
 font-size:26px;
 line-height:22px;
 }
