--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,31 @@ ul {
     list-style: inside;
 }
 
-hr {
+/* hr {
         width: 100%;
         height: 2px;
         margin-left: auto;
         margin-right: auto;
         background-color: #940a26;
         border: 0 none;
-      }
+      }*/
+
+hr {
+    border: none;
+    border-top: 3px double #333;
+    color: #333;
+    overflow: visible;
+    text-align: center;
+    height: 5px;
+}
+
+hr:after {
+    background: #fff;
+    content: '§';
+    padding: 0 4px;
+    position: relative;
+    top: -13px;
+}
 
 li{
   margin: 10px 0;
