--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ li{
   font-size:18px;
 }
 
+
 .figure {
     margin: 0px;
 }
@@ -1137,6 +1138,10 @@ margin-top: 50px;
 
 .Collaborations h4{
     margin-top:30px;
+}
+
+.Collaborations ul{
+  margin-bottom: 30px;
 }
 
 .Teaching-container {
