--- a/css/style.css
+++ b/css/style.css
@@ -1411,7 +1411,7 @@ gin-top:10px;
   font-weight: bold;
   font-size:20px;
   float: right;
-  margin-left: 0px;
+  margin-left: 1em;
   margin-top: -60px;
 }
 
@@ -1457,8 +1457,8 @@ margin-top: 50px;
     margin-top:0px;
     text-align: center;
     margin-bottom:60px;
-    margin-left:200px;
-    margin-right:200px;
+    margin-left:10em;
+    margin-right:10em;
     color: #808080;
     font-size:20px;
 }
