--- a/css/style.css
+++ b/css/style.css
@@ -1183,6 +1183,9 @@ background-position-y: 70px;
     margin-right:30px;
 
 }
+
+
+
 .points{ 
 	margin-bottom: 10px;
 	font-size:14px;
@@ -1331,10 +1334,16 @@ background-color:white;
 
 }
 
+
 .Research h4{
-    font-size:22px;
+    font-size:25px;
     color:gray;
+    text-align: center;
+    font-weight:510;
+    text-transform: capitalize;
 }
+
+
 
 .Research li{
   margin-bottom: 10px;
@@ -1410,7 +1419,7 @@ gin-top:10px;
   content: '\002B';
   color: grey;
   font-weight: bold;
-  font-size:20px;
+  font-size:13px;
   float: right;
   margin-left: 1em;
   margin-top: -60px;
@@ -1444,9 +1453,10 @@ margin-top: 50px;
 }
 
 .Collaborations h2{
-    font-size:30px;
+    font-size:25px;
+    text-indent: 0;
+    text-align: center;
     font-weight:510;
-    text-indent: 30px;
     margin-top:30px;
     margin-bottom:15px;
     text-transform: capitalize;
@@ -1454,12 +1464,15 @@ margin-top: 50px;
 
 }
 
+
+
 .Collaborations h4{
     margin-top:0px;
+    text-indent: 0;
     text-align: center;
     margin-bottom:60px;
-    margin-left:2em;
-    margin-right:2em;
+    margin-left:1.5em;
+    margin-right:1.5em;
     color: #808080;
     font-size:20px;
 }
@@ -1467,6 +1480,10 @@ margin-top: 50px;
 .Collaborations ul{
   margin-bottom: 30px;
   font-size: 16px;
+}
+
+.Collaborations li{
+  font-size:16px;
 }
 
 
@@ -1490,7 +1507,15 @@ margin-top: 50px;
     width: 250px;
     height: 110px;
     margin: 0 auto;
+    margin-top:3em;
 }
+
+
+.Collaborations .img-responsive{
+    width:60%;
+    height:60%;
+}
+
 
 .Teaching-container {
 background-repeat: no-repeat;
@@ -1505,11 +1530,8 @@ margin-top: 10px;
 }
 
 .Teaching h2{
-    font-size:30px;
+    font-size:25px;
     font-weight:510;
-    text-align: center;
-    text-indent: 0px;
-    margin-top:0px;
     text-transform: capitalize;
     color:grey;
 }
@@ -1552,7 +1574,7 @@ background-color: #f1f1f1;
 }
 
 .Awards h2{
-    font-size:30px;
+    font-size:25px;
     font-weight:510;
     text-align: center;
     text-indent: 0px;
@@ -1575,6 +1597,11 @@ background-color: #f1f1f1;
 
 .fa .fa-trophy{
     margin:0px;
+}
+
+.Collaborations .img-responsive{
+    width:60%;
+    height:60%;
 }
 
 
