--- a/css/style.css
+++ b/css/style.css
@@ -1438,7 +1438,7 @@ margin-right: 0px;
   font-weight: bold;
   font-size:13px;
   float: right;
-  margin-left: 1em;
+  margin-left: 2em;
   margin-top: -60px;
 }
 
@@ -1449,6 +1449,8 @@ margin-right: 0px;
 .Teaching .content {
   padding: 0 10px;
   max-height: 0;
+  margin-bottom:10px;
+  margin-top:0px;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
   background-color: #f1f1f1;
