--- a/css/style.css
+++ b/css/style.css
@@ -1210,6 +1210,7 @@ background-position-y: 70px;
 .AboutMe .small_margin{
     margin-top:-10px;
     margin-bottom:-10px;
+    margin-right:2em;
 }
 
 .small_margin{
