--- a/css/style.css
+++ b/css/style.css
@@ -1443,7 +1443,7 @@ margin-right: 0px;
   float: right;
   margin-left: 1em;
   margin-top: -60px;
-  margin-right:-3em;
+  margin-right:-1.5em;
 }
 
 .Teaching .active:after {
@@ -1563,6 +1563,7 @@ margin-top: 0px;
     font-weight:400;
     text-transform: capitalize;
     color:grey;
+    margin-left:-1.2em;
 }
 
 .Teaching h4{
