--- a/css/style.css
+++ b/css/style.css
@@ -799,6 +799,25 @@ margin-top: 0px;
   margin-bottom: 5px;
 }
 
+.Teaching .vid {
+  width:100%;
+  padding: 0 10px;
+  background-color: white;
+  margin-top:3em;
+  margin-bottom:3em;
+}
+
+
+.Teaching h3{
+    font-weight: 500;
+    margin-top:0px;
+    text-indent: 0;
+    text-align: center;
+    margin-bottom:20px;
+    color: #808080;
+    font-size:18px;
+}
+
 /* Awards
 ---------------------------------*/
 
