--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,15 @@ hr {
     color: #333;
     overflow: visible;
     text-align: center;
-    height: 5px;
+    background: #f1f1f1;
 }
 
 hr:after {
-    background: #fff;
+    background: #f1f1f1;
     content: '§';
-    padding: 0 4px;
     position: relative;
     top: -13px;
+    background-color: #f1f1f1;
 }
 
 li{
